logs/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingponglogs-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingponglogs
  template:
    metadata:
      labels:
        app: pingponglogs
    spec:
      volumes:
        - name: information-volume
          configMap:
            name: information-config
      containers:
        - name: log-reader
          image: krisnakris/log_reader:2.5.3
          volumeMounts:
            - name: information-volume
              mountPath: /app/config
        - name: pingpong
          image: krisnakris/pingpong:2.7.2
