logs/manifests/combined-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingponglogs-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingponglogs
  ports:
    - name: log-reader
      port: 2345
      protocol: TCP
      targetPort: 3012
    - name: pingpong
      port: 2355
      protocol: TCP
      targetPort: 3021
