logs/manifests/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingponglogs-lb
  namespace: exercises
  labels:
    app: pingponglogs
spec:
  type: LoadBalancer
  selector:
    app: pingponglogs
  ports:
    - name: http-log-reader
      port: 80
      protocol: TCP
      targetPort: 3012
    - name: http-pingpong
      port: 8080
      protocol: TCP
      targetPort: 3021
