logs/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingponglogs-ingress
  namespace: exercises
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingponglogs2-svc
                port:
                  name: log-reader
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingponglogs2-svc
                port:
                  name: pingpong
